# supernote

./: .cruft.json  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  TODO  config-example.yaml  pyproject.toml  requirements_dev.txt  reset-local.sh  run-local.sh
.github/workflows/: docker.yaml  lint.yaml  pages.yaml  test.yaml
docs/: bootstrap_guide.md  frontend_prototype.html
llama-swap/: Dockerfile  README.md  llama-swap.yaml  rebuild.sh  restart.sh  start.sh  stop.sh
supernote/alembic/versions/: a1b2c3d4e5f6_add_deleted_root_id_to_user_file.py  b1c2d3e4f5a6_add_app_settings_table.py
supernote/cli/: admin.py
supernote/models/: base.py  extended.py  file_web.py
supernote/notebook/: parser.py
supernote/server/: README.md  app.py  config.py
supernote/server/db/models/: file.py  settings.py
supernote/server/mcp/: auth.py
supernote/server/resources/prompts/chat/common/: system.md
supernote/server/resources/prompts/chat/default/: prompt.md
supernote/server/resources/prompts/folder_summary/common/: instruction.md
supernote/server/resources/prompts/folder_summary/default/: prompt.md
supernote/server/resources/prompts/summary/common/: instruction.md
supernote/server/routes/: extended.py  file_device.py  file_web.py
supernote/server/services/: backfill.py  blob.py  chat.py  file.py  folder_summary.py  local_llm_service.py  processor.py  search.py  settings.py  temp_cleanup.py  vfs.py
supernote/server/services/processor_modules/: gemini_embedding.py  local_embedding.py  local_ocr.py  local_summary.py  page_hashing.py  summary.py  summary_common.py
supernote/server/static/: index.html
supernote/server/static/js/: main.js
supernote/server/static/js/api/: client.js
supernote/server/static/js/components/: ChatPanel.js  DashboardPanel.js  FileCard.js  FileViewer.js  FolderOverviewCard.js  LoginCard.js  MoveModal.js  RecyclePanel.js  RenameModal.js  SearchPanel.js  SettingsPanel.js  SummaryPanel.js  SystemPanel.js
supernote/server/static/js/utils/: markdown.js
supernote/server/utils/: paths.py  prompt_loader.py
tests/models/: test_log_requests.py
tests/server/device/: test_overwrite_dedup.py  test_quota.py  test_sync.py
tests/server/services/: test_temp_cleanup.py
tests/server/services/processor_modules/: test_page_hashing.py  test_summary_module.py
tests/server/web/: test_listing.py  test_recycle.py  test_recycle_folder_and_dedup.py
